generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// workspace
enum Role {
  member
  admin
  observer
}

model Workspace {
  id               Int      @id @default(autoincrement())
  name             String
  description      String?
  picture          String?
  companyInfo      String   @default("")
  productOrService String   @default("")
  values           String   @default("")
  ownerId          String
  createdAt        DateTime @default(now())
  updatedAt        DateTime @updatedAt

  members       WorkspaceMember[]
  simulators    Simulator[]
  conversations Conversation[]

  @@map("workspaces")
}

model WorkspaceMember {
  workspaceId Int
  userId      String
  role        Role     @default(member)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  workspace Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)

  @@id(name: "key", fields: [workspaceId, userId])
  @@map("workspace_members")
}

// simulators
model Simulator {
  id             Int      @id @default(autoincrement())
  workspaceId    Int?
  title          String
  description    String
  picture        String?
  duration       Int
  behaviorPrompt String
  createdBy      String
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt

  workspace Workspace? @relation(fields: [workspaceId], references: [id], onDelete: Cascade)

  prepQuestions PrepQuestion[]
  evaluations   Evaluation[]
  conversations Conversation[]

  @@map("simulators")
}

model PrepQuestion {
  id          Int    @default(autoincrement())
  key         String @unique @default(uuid())
  simulatorId Int
  label       String

  simulator Simulator @relation(fields: [simulatorId], references: [id], onDelete: Cascade)

  answers PrepAnswer[]

  @@id([id, simulatorId])
  @@map("prep_questions")
}

model Evaluation {
  id               Int    @default(autoincrement())
  key              String @unique @default(uuid())
  simulatorId      Int
  frameworkPrompt  String
  assessmentPrompt String
  feedbackPrompt   String

  simulator Simulator @relation(fields: [simulatorId], references: [id], onDelete: Cascade)

  assessments Assessment[]

  @@id([id, simulatorId])
  @@map("evaluations")
}

// conversations
enum AssessmentType {
  text
  graph
}

model Conversation {
  uid         String   @id @default(uuid())
  simulatorId Int
  workspaceId Int
  name        String
  userId      String
  startedAt   DateTime @default(now())
  stoppedAt   DateTime

  simulator Simulator @relation(fields: [simulatorId], references: [id], onDelete: Cascade)
  workspace Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)

  answers     PrepAnswer[]
  messages    Message[]
  assessments Assessment[]

  @@map("conversations")
}

model PrepAnswer {
  id              Int    @id @default(autoincrement())
  prepQuestionKey String
  conversationUid String
  answer          String

  prepQuestion PrepQuestion @relation(fields: [prepQuestionKey], references: [key], onDelete: Cascade)
  conversation Conversation @relation(fields: [conversationUid], references: [uid], onDelete: Cascade)

  @@map("prep_answers")
}

model Message {
  id              Int      @id @default(autoincrement())
  conversationUid String
  sender          String
  content         String
  sentAt          DateTime @default(now())

  conversation Conversation @relation(fields: [conversationUid], references: [uid], onDelete: Cascade)

  @@map("messages")
}

model Assessment {
  id              Int            @id @default(autoincrement())
  conversationUid String
  evaluationKey   String
  type            AssessmentType
  data            String
  debrief         String
  createdAt       DateTime       @default(now())

  conversation Conversation @relation(fields: [conversationUid], references: [uid], onDelete: Cascade)
  evaluation   Evaluation   @relation(fields: [evaluationKey], references: [key], onDelete: Cascade)

  @@map("assessments")
}
